# Introduction-to-LangChain-LangChain-for-Beginners

./: README.md  main.py  pyproject.toml
Chain/: ConditionalChain.py  ParallelChain.py  README.md  SequentialChain.py  simple_chain.py
Doc Loaders/: README.md  Text_loader.py  app.py  appp.py  chatbot_data.db  chatbot_db.py  directoryloader.py  pdf_loader_test.py  poem.txt  webloader.py
Doc Loaders/faiss_index/: index.faiss  index.pkl
Langchain Components/: README.md  main.py
Model/: README.md  chatbot_anthropic.py  chatmodel.py  chatmodel_huggingface_system.py  chatmodel_hugiface.py  llm_demo.py
Model/Embedding_Model/: doc_similirty.py  embedding_openai.py  embedding_openai_doc,py  embedding_system_huggingface.py
Output_Parsers/: README.md  StrOuputParser.py  StrucOutputParser.py  jsonoutputparser.py  pydantic_demo.py  pydanticoutputparser.py  with_structure_output_typeddict.py
Prompts/: README.md  chatbot.py  messages.py  prompt_generator.py  template.json
Runnables/: AllInOne.py  README.md  RunnableLambda.py  Runnableparallel.py  Runnablepassthrough.py  runnableSequeance.py  runnable_example.py  runnable_types.py
text-spliters/: length_based.py
