[project]
name = "langchain_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.31.2",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.17",
    "python-dotenv>=1.1.0",
    "transformers>=4.51.3",
]
